--- a/index.html
+++ b/index.html
@@ -10,24 +10,26 @@
   <title>Frontend Mentor | Order summary card</title>
 </head>
 <body>
-  <div class="bg-image"></div>
-  <div class="container">
-    <img src="./images/illustration-hero.svg" alt="illustration hero" class="hero">
+  <main>
+    <div class="bg-image"></div>
+    <div class="container">
+      <img src="./images/illustration-hero.svg" alt="illustration hero" class="hero">
 
-    <h1>Order Summary</h1>
-    <p class="desc">You can now listen to millions of songs, audiobooks, and podcasts on any device anywhere you like!</p>
-  
-    <div class="order-flex">
-      <img src="./images/icon-music.svg" alt="music icon" class="icon-music">
-      <div class="plan-flex">
-        <h4>Annual Plan</h3>
-        <p>$59.99/year</p>
+      <h1>Order Summary</h1>
+      <p class="desc">You can now listen to millions of songs, audiobooks, and podcasts on any device anywhere you like!</p>
+    
+      <div class="order-flex">
+        <img src="./images/icon-music.svg" alt="music icon" class="icon-music">
+        <div class="plan-flex">
+          <h2>Annual Plan</h2>
+          <p>$59.99/year</p>
+        </div>
+        <a href="#" class="change">Change</a>
       </div>
-      <a href="#" class="change">Change</a>
-    </div>
 
-    <button class="payment-btn">Proceed to Payment</button>
-    <button class="cancel-btn">Cancel Order</button>
-  </div>
+      <button class="payment-btn">Proceed to Payment</button>
+      <button class="cancel-btn">Cancel Order</button>
+    </div>
+  </main>
 </body>
 </html>
